--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -42,6 +42,7 @@
 
     <section class="meta">
       <a href="{{ site.github.owner_url }}" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="https://www.linkedin.com/pub/mathias-labeyrie/16/197/71" target="_blank"><i class="fa fa-linkedin"></i></a>
       <a href="/atom.xml"><i class="fa fa-rss"></i></a>
     </section>
 
